--- a/Phase 3 - Data analysis.qmd
+++ b/Phase 3 - Data analysis.qmd
@@ -158,6 +158,7 @@ The following tables provide an overview of the final joined dataset (Table 1) a
 ```{r}
 #| echo: false
 #| message: false
+#| warning: false
 
 joined_dataset <- joined_dataset
 
@@ -237,6 +238,7 @@ We want to determine the size of the contribution of `avg_EarnS`and `total_Emp` 
 ```{r}
 #| echo: false
 #| message: false
+#| warning: false
 
 # Comparing the evolution of our main explanatory variables at a sectoral level
 
@@ -302,6 +304,7 @@ The second and third graph show, respectively, the evolution of `avg_EarnS` and 
 ```{r}
 #| echo: false
 #| message: false
+#| warning: false
 
 # Comparing the evolution of Average Monthly Wage and CO2 Emissions by Sectors in California and Texas
 
@@ -369,6 +372,7 @@ We observe that in California, where (as we mentioned) the distribution of secto
 ```{r}
 #| echo: false
 #| message: false
+#| warning: false
 
 graph_CA_emp <- joined_dataset |>
   filter(`NAICS2  (sectors)` != 11 & `NAICS2  (sectors)` != 23 & `NAICS2  (sectors)` != 49) |>
@@ -438,6 +442,11 @@ $\Delta E_T = \Delta E_Q + \Delta E_S+\Delta E_I$ with $\Delta E_Q = \sum_i L(E^
 The analysis will be conducted from 2013 to 2023, thus we will study the long run contribution over the period. Based on the previous equations we derive the contribution of each factor depending on the sector (in total and in percentage) as well as the total variation of CO2 over the period obtained from the sum of all factor variations. 
 
 ```{r}
+#| echo: false
+#| message: false
+#| warning: false
+
+
 # Calculating Q (Total Employment), S (Activity Share), and I (Intensity) and adding it into a dataset
 joined_dataset_preparation <- joined_dataset |> 
   group_by(year,`NAICS2  (sectors)`) |>
@@ -519,6 +528,10 @@ Overall the Intensity factor has a positive coefficient, underlining the fact th
 
 
 ```{r}
+#| echo: false
+#| message: false
+#| warning: false
+
 # Graphical representation that uses normalized data (contribution between 0-100%)
 normalized_data <- contribution_summary_table |>
   mutate(
@@ -554,6 +567,10 @@ normalized_data |>
 For a clearer analysis, we normalize the contribution to see the relative contribution of each driver (in percentage) on emissions. We observe that the intensity factor plays a greater role overall, underlining the fact that carbon efficiency  (here emissions divided by  the workforce size of the industry) is crucial for energy-producing firms.
 
 ```{r}
+#| echo: false
+#| message: false
+#| warning: false
+
 # Summarizing average contributions across all sectors between the years
 relative_contrib_between_var <- normalized_data |>
   group_by(Factor) |> 
@@ -587,6 +604,9 @@ As we’ve seen sectors 21 and 22 represent  98% of total emissions, we will per
 
 
 ```{r}
+#| echo: false
+#| message: false
+#| warning: false
 
 # Creating a subset that includes our wanted sectors
 joined_subset_preparation <- joined_dataset |> 
@@ -660,6 +680,9 @@ We firstly notice the difference of contribution depending on the State : it emp
 It then  appears that the majority of the emission’s increases in Texas is linked to Intensity. It reveals that the hike we previously mentioned is probably due to a worse energy mix and technology of production, the fracking which increased between the two periods is an example of such worsening.
 
 ```{r}
+#| echo: false
+#| message: false
+#| warning: false
 # Normalizing contributions for percentage analysis as in the general LMDI
 state_relative <- state_sector_lmdi |>
   mutate(
