--- a/Phase 3 - Data analysis.qmd
+++ b/Phase 3 - Data analysis.qmd
@@ -3,6 +3,10 @@ title: "Phase 3 - Data analysis"
 format: 
   html: default
   pdf: default
+output:
+  pdf_document:
+    latex_engine: xelatex
+
 ---
 
 ```{r}
@@ -23,15 +27,16 @@ library(tidyr)
 library(dplyr)
 library(knitr)
 library(kableExtra)
-library(cowplot)
 library(ggplot2)
 library(broom)
+library(cowplot)
 
 ## Regression
-library(stargazer)
 library(modelsummary)
 library(lmtest)
 library(lfe)
+library(xtable)
+
 ```
 
 ```{r}
@@ -155,6 +160,7 @@ After merging and cleaning, we ended up with a dataset of 18270 observations fro
 
 The following tables provide an overview of the final joined dataset (Table 1) and a analysis sector by sector of extremum levels and contributions (Table 2).
 
+
 ```{r}
 #| echo: false
 #| message: false
@@ -170,18 +176,12 @@ dataset_summary <- joined_dataset |>
     "Number of columns" = ncol(joined_dataset),
     "Period" = paste(range(year), collapse= " - "),
     "Periodicity" = "Annual",
-    "Extremum levels of CO2 emissions " = paste(range(`Total CO2 Emissions (non_biogenic)`), collapse = " - "),
+    "Extremum levels \n of CO2 emissions " = paste(range(`Total CO2 Emissions (non_biogenic)`), collapse = " - "),
     # separate the rows that have a "," to not double count firms in several subsectors as distinct values
     "Number of industry" = length(unique(industry)),
     "Number of sectors" = length(unique(`NAICS2  (sectors)`)),
     #Let's implement a missing values count to be sure we correctly treated them
-    "Total number of missing values across the sheet" = sum(sapply(joined_dataset, function(x) sum(is.na(x)))),
-    "Missing values in one our key variables" = sum(
-      #summing every missing values of each key variables and then summing them with each others to obtain the          total
-      sum(is.na(`Total CO2 Emissions (non_biogenic)`)),
-      sum(is.na(total_Emp)),
-      sum(is.na(avg_EarnS)),
-      sum(is.na(total_FrmJbC)))
+    "Total number of missing \n values across the sheet" = sum(sapply(joined_dataset, function(x) sum(is.na(x)))),
   )
 
 Total_C02_emission_CA <- joined_dataset |>
@@ -191,39 +191,39 @@ Total_C02_emission_CA <- joined_dataset |>
 NAICS2_level_summary <- joined_dataset |>
   group_by(`NAICS2  (sectors)`) |>
   summarise(
-    "Number of rows" = n(),
+    "Number of industry" = length(unique(industry)),
     "Period" = paste(range(year), collapse= " - "),
-    "Periodicity" = "Annual",
-    "Extremum levels of CO2 emissions " = paste(range(`Total CO2 Emissions (non_biogenic)`), collapse = " - "),
     # separate the rows that have a "," to not double count firms in several subsectors as distinct values
-   "Contribution (%) of the sector in the total CO2 emissions" = 
+   "Contribution (%) of the sector \n in the total CO2 emissions" = 
       100 * sum(`Total CO2 Emissions (non_biogenic)`) / sum(joined_dataset$`Total CO2 Emissions (non_biogenic)`),
    #Contribution of one sector in total emissions divided by the emissions of all sectors 
-    "Contribution (%) of California to the total CO2 emissions of the sector" = 
+    "Contribution (%) of California \n to the total CO2 emissions of the sector" = 
       100 * sum(if_else(State == "CA", `Total CO2 Emissions (non_biogenic)`, 0, missing = 0), na.rm = TRUE) / 
       sum(if_else(State %in% c("CA", "TX"), `Total CO2 Emissions (non_biogenic)`, 0, missing = 0), na.rm = TRUE),
    #Contribution of California to total emissions of the sector, Texas' one is thus obtain by  TX = 100 - CA
-   "Sector Contribution (%) of California's total CO2 emissions" = 
+   "Sector Contribution (%) of  \n California's total CO2 emissions" = 
     100 * sum(if_else(State == "CA", `Total CO2 Emissions (non_biogenic)`, 0, missing = 0), na.rm = TRUE) / 
     sum(joined_dataset$`Total CO2 Emissions (non_biogenic)`[joined_dataset$State == "CA"], na.rm = TRUE),
    #Same but for Texas
-   "Sector Contribution (%) of Texas' total CO2 emissions" = 
+   "Sector Contribution (%) of \n Texas' total CO2 emissions" = 
     100 * sum(if_else(State == "TX", `Total CO2 Emissions (non_biogenic)`, 0, missing = 0), na.rm = TRUE) / 
-    sum(joined_dataset$`Total CO2 Emissions (non_biogenic)`[joined_dataset$State == "TX"], na.rm = TRUE),
-    "Number of industry" = length(unique(industry)),
+    sum(joined_dataset$`Total CO2 Emissions (non_biogenic)`[joined_dataset$State == "TX"], na.rm = TRUE)
+    
   )
 
 ## Tables for each summary
 
 dataset_summary |>
-  kable("latex", caption = "Global database information") |>
-  kable_styling(full_width = T, latex_options = c("striped", "hover", "condensed"))
+  kable("latex", caption = "Global database information",format.args = list(decimal.mark = ".", digits = 2)) |>
+  kable_styling( latex_options = c("striped", "hover", "condensed", "scale_down", "line", "hold_position")) 
 
 
 NAICS2_level_summary |>
-  kable("latex", caption = "Per NAICS 2 database information") |>
-  kable_styling(full_width = T, latex_options = c("striped", "hover", "condensed"))
+  kable("latex", caption = "Per NAICS 2 database information",format.args = list(decimal.mark = ".", digits = 2)) |>
+  kable_styling( latex_options = c("striped", "hover", "condensed", "scale_down", "line")) 
+
 ```
+
 
 We notice that there is no industries in Texas that reported carbon emissions in the NAICS 11 sectors, namely Agriculture, Forestry, Fishing and Hunting. On the other hand, there is no Californian firms that have reported carbon emissions in both NAICS 23 and 49 sectors, namely Construction and Transportation/Warehousing. To enhance the readability of our following graphical representations and because their contribution to global carbon emissions are infinitesimal (around 0.001% maximum) we will cancel out those industries from our analysis and interpretations. The analysis of carbon emissions of those sectors is indeed interesting but less with our energy-producing approach, according to the three types we defined. For example, the construction sector accounted for 36% of total US CO2 emissions in the US in 2018 ([EIA](https://www.iea.org/reports/global-status-report-for-buildings-and-construction-2019)) but we see that the part we are interested in only accounts for 0.00013% of total C02 emissions in Texas and California.
 
@@ -295,7 +295,7 @@ plot_grid(
   ncol = 3, rel_widths = c(1, 0.8, 0.3))
 ```
 
-First, we observe a relatively high dispersion of monthly average wages across sectors. In 2013, `avg_EarnS` ranged from around 3500 to 7500 dollars and in 2023, if we exclude some big outliers, the range was 5000 - 10000\$. It seems that from 2013 to 2023, the lower wages increased by approximately 40% during the time period, while the highest wages increased by a third. On the other hand, Total Employment stayed relatively stable in most sectors (especially in smaller sectors), with an overall increase in 10 years. Most sectors experienced job contractions during the Covid-period, starting with sector 72 (Accommodation & Food Services). We can observe that sector 21 (Mining, Quarrying & Oil & Gas Extraction) experienced massive lay-offs in 2015 and 2016, probably due to the sharp decline in oil-prices during the mid-2014s, which impacted especially shale oil companies in Texas. This could also have impacted the Manufacturing sector 33 (also shown in the decline during this period).
+First, we observe a relatively high dispersion of monthly average wages across sectors. In 2013, `avg_EarnS` ranged from around 3500 to 7500 dollars and in 2023, if we exclude some big outliers, the range was 5000 - 10000\$ . It seems that from 2013 to 2023, the lower wages increased by approximately 40% during the time period, while the highest wages increased by a third. On the other hand, Total Employment stayed relatively stable in most sectors (especially in smaller sectors), with an overall increase in 10 years. Most sectors experienced job contractions during the Covid-period, starting with sector 72 (Accommodation & Food Services). We can observe that sector 21 (Mining, Quarrying & Oil & Gas Extraction) experienced massive lay-offs in 2015 and 2016, probably due to the sharp decline in oil-prices during the mid-2014s, which impacted especially shale oil companies in Texas. This could also have impacted the Manufacturing sector 33 (also shown in the decline during this period).
 
 Note : Even if the dataset comprises energy-related facilities, those categorized under other NAICS sectors, such as sector 62 or 72 likely involve other activities as part of or adjacent to the energy infrastructure.
 
@@ -437,6 +437,7 @@ To better analyze the contributions of `total_Emp` we need to analyze precisely 
 $\leftrightarrow  E = \sum_iQ(Q_i/Q)(E_i/Q_i)$ (by multiplicating and dividing by $Q_i$ and $Q$)  thus we obtain $E = ∑_i(Q_iS_iI_i)$
 
 As we explained in the Methodology part, we will choose an additive LMDI due to the nature of our chosen variables. The variation of CO2 emission will then be calculated based on a difference which equals the sum of all the drivers’ variations. It has the following structure:
+
 $\Delta E_T = \Delta E_Q + \Delta E_S+\Delta E_I$ with $\Delta E_Q = \sum_i L(E^T_i,E^0_i)*ln(Q_i^T/Q_i^0)$ ; $\Delta E_S = \sum_i L(E^T_i,E^0_i)*ln(S_i^T/S_i^0)$ and  $\Delta E_I = \sum_i L(E^T_i,E^0_i)*ln(I_i^T/I_i^0)$ with $L (x,y)= (x-y) /(ln (x) - ln (y))$ or $L(x,y) = x$ for $x = y$  defined as the logarithm mean.
 
 The analysis will be conducted from 2013 to 2023, thus we will study the long run contribution over the period. Based on the previous equations we derive the contribution of each factor depending on the sector (in total and in percentage) as well as the total variation of CO2 over the period obtained from the sum of all factor variations. 
@@ -501,26 +502,55 @@ contribution_summary_table <- lmdi_results |>
     S_Percentage = 100 * Contribution_Share / Total_CO2_var,
     I_Percentage = 100 * Contribution_Intensity / Total_CO2_var,
   )
-  
+```
 
-# Table summarizing contributions in value and percent
-contribution_summary_table |>
+
+```{r}
+#| echo: false
+#| message: false
+#| warning: false
+
+# Table summarizing contributions in values
+contribution_summary_table_values  <- contribution_summary_table
+contribution_summary_table_values |>
   mutate(
     "CO2 emissions Variation" = Total_CO2_var,
     "Activity contribution" = Contribution_Activity,
     "Structure contribution" = Contribution_Share,
     "Intensity contribution" = Contribution_Intensity,
-    "Activity contribution (in %)" = A_Percentage,
-    "Structure contribution (in %)" = S_Percentage,
-    "Intensity contribution (in %)" = I_Percentage,
     .keep = "none"
   ) |>
-  kable("latex", caption = "Contribution of each factor") |>
-  kable_styling(full_width = T, latex_options = c("striped", "hover", "condensed"))
+  kable(
+    "latex",
+    caption = "Contribution of each factor (values)",
+    format.args = list(decimal.mark = ".", digits = 3)
+    ) |>
+  kable_styling(
+    latex_options = c("striped", "hover", "condensed", "scale_down", "line")
+    )
+
+#Creation of a second table for the percentage contribution analysis
+contribution_summary_table_percent <- contribution_summary_table
+
+ contribution_summary_table_percent |>
+  mutate(
+  "Activity contribution (in %)" = A_Percentage,
+    "Structure contribution (in %)" = S_Percentage,
+    "Intensity contribution (in %)" = I_Percentage,
+  .keep = "none"
+  ) |>
+  kable(
+    "latex",
+    caption = "Contribution of each factor (%)", 
+    format.args = list(decimal.mark = ".", digits = 3)
+    ) |>
+  kable_styling(
+    latex_options = c("striped", "hover", "condensed", "scale_down", "line", "hold_position")
+    ) 
 
 ```
-Firstly, we observe the difference in variations among sectors which correlates with the magnitude of each sector and the CO2 emissions associated. A huge sector in terms of emission (e.g. 21) provokes more CO2 variations across time but encompasses, as we’ve seen, more firms. As we are more interested in relative contribution, those values only provide information on the magnitude of the variation without giving a clear view of their drivers. Nonetheless we observe the trend for CO2 emissions of each sector and still find the huge positive variations for sectors such as 21 and 32 similar to the hikes described in the graphical representations.
 
+Firstly, we observe the difference in variations among sectors which correlates with the magnitude of each sector and the CO2 emissions associated. A huge sector in terms of emission (e.g. 21) provokes more CO2 variations across time but encompasses, as we’ve seen, more firms. As we are more interested in relative contribution, those values only provide information on the magnitude of the variation without giving a clear view of their drivers. Nonetheless we observe the trend for CO2 emissions of each sector and still find the huge positive variations for sectors such as 21 and 32 similar to the hikes described in the graphical representations.
 
 Then, if we analyse the contribution in percentage (columns 6-8) we can observe the relative importance of a factor on CO2 emissions in a specific sector between 2013 and 2023. The sum of the three drivers sums up to 100% but there is, at this point, no normalization on the values; thus, we can observe  contributions of more than 100% if the variations of a factor is higher than the ones related to CO2 emissions. An interesting finding is the extremely high values for some sectors such as 22 (Utilities) which encompass for example electric power generation and natural gas distribution. For this case we observe that the Intensity factor has a great positive contribution in the variation (1141%) suggesting that the increase in carbon intensity of this sector was large but covered by the decreasing activity and the shrinking  relative part of the industry in the total sector.
 
@@ -734,25 +764,45 @@ We choose to use a log-log regression model to linearize a possibly non-linear r
 
 Using the Ordinary Least Squares method, we obtain the following results :
 
-```{r}
-#| echo: false
-#| message: false
-#| warning: false
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
 
 ## Defining logarithmic variables to rationalize outliers/zero values 
 dataset_for_ols <- joined_dataset |> 
   filter(`Total CO2 Emissions (non_biogenic)` > 0 & total_Emp > 0) |>
   mutate(`ln Total CO2 Emissions` = log(`Total CO2 Emissions (non_biogenic)`), `ln emp` = log(total_Emp), `ln earn` = log(avg_EarnS))
 
+```
+
+
+```{r}
+#| echo: false
+#| message: false
+#| warning: false
 
 ## Running the base regression
 base_ols_model <- lm(`ln Total CO2 Emissions` ~  `ln earn` + `ln emp`, data = dataset_for_ols)
-
-## Summary of the OLS results
-stargazer(base_ols_model, type = "latex",
-          title = "Base Model Regression Results",
-          out = "base_regression_results.tex")
 ```
+
+
+```{r results='asis'}
+#| echo: false
+#| message: false
+#| warning: false
+
+# Tidy regression results
+tidy_model <- tidy(base_ols_model)
+
+xtable_table <- xtable(tidy_model)
+xtable::print.xtable(
+  xtable_table,
+  include.rownames = FALSE,
+  comment = FALSE
+  
+)
+
+```
+
+
 
 We observe that the variable `ln earn` is positive and highly significant with a p-value of less than 2e-16. That means that all else equal, a 1% increase in average monthly wage is associated with an approximately 3.04 % increase in CO2 emissions. On the other hand, `ln emp` is not statistically significant and is positively correlated with CO2 emissions : all else equal, a 1% increase of Total Employment in an industry is associated with a 0,06% increase of CO2 Emissions in that industry. These results partially contradict our initial hypothesis. On one hand, the higher the wage, the higher the CO2 emissions in an industry. If this result does not condone the concept of “green jobs”, it aligns with the IEA’s report, according to which higher-emitting industries, like oil extraction, pay higher wages to employees than more volatile industries. On the other hand, the more employees there are, the higher the emissions (even if not significantly). This confirms the idea that employment size works as a proxy for industry size. The bigger the industry, the more it should emit.
 
@@ -772,8 +822,8 @@ Applying OLS, we now have the following results :
 
 ```{r}
 #| echo: false
-#| message: false
 #| warning: false
+#| message: false
 
 ## Defining a dummy variable for State, which takes the value 1 for Texas and 0 for California
 dataset_for_ols <-
@@ -782,10 +832,22 @@ dataset_for_ols <-
 
 extend_ols_model <- lm(`ln Total CO2 Emissions` ~  `ln earn` + `ln emp` + state_dummy, data = dataset_for_ols)
 
+```
+
+
+```{r  results='asis'}
+#| echo: false
+#| message: false
+#| warning: false
+
 # Summary of the OLS results
-stargazer(extend_ols_model, type = "latex",
-          title = "Dummy Model Regression Results",
-          out = "dummy_regression_results.tex")
+
+xtable_table <- xtable(extend_ols_model)
+xtable::print.xtable(
+  xtable_table,
+  include.rownames = FALSE,
+  comment = FALSE
+)
 ```
 
 As in the previous results, we still have a positive and highly significant correlation between average monthly wage and CO2 emissions per industry : A 1% increase in average wages is associated with approximately a 3.16% increase in CO2 emissions, keeping all other variables constant. On the contrary ln emp is still not statistically significant (p-value = 0.134) and is still positive. Finally, the dummy `Environment` proves to be highly significant (p-value \< 0.01) and positive. We could infer that firms in California after the introduction of the cap-and-trade program in 2015 emit approximately 90% less CO2 than firms in Texas during the same period, controlling for wages and employment. This result confirms our main hypothesis : The cap-and-trade program has a significant effect on the emissions of industries in our dataset.
@@ -810,9 +872,32 @@ par(mfrow = c(2, 2)) ### setting up layout
 plot(extend_ols_model)
 
 ## Homoscedasticity
-stargazer(bptest(extend_ols_model), type = "latex",
-          title = "Breusch-Pagan test results",
-          out = "bp_test_results.tex")
+
+# running the bptest and extracting relevant values
+bp_result <- bptest(extend_ols_model)
+
+# Extraction of  test statistics and p-value
+bp_values <- data.frame(
+  Statistic = bp_result$statistic,
+  P_value = bp_result$p.value
+)
+```
+
+
+```{r  results='asis'}
+#| echo: false
+#| message: false
+#| warning: false
+
+# creation of  a LaTeX table
+
+xtable_table <- xtable(bp_values)
+xtable::print.xtable(
+  xtable_table,
+  include.rownames = FALSE,
+  comment = FALSE
+)
+
 ```
 
 We can assess normality of residuals by first plotting the residuals in a Q-Q plot. We observe that while the residuals follow the diagonal line in general, the points deviate significantly in the tails.This implies that the residuals are not normally distributed. Secondly, the Residuals vs. Fitted plot reveals that the residuals of the regression are not randomly scattered, as they should be in the absence of heteroscedasticity. On the contrary, the residuals seem to follow a decreasing funnel shape, which suggests non-constant variance of the residuals i.e. presence of heteroscedasticity. This result is further confirmed after implementing a Breusch-Pagan test of heteroscedasticity : the p-value < 2.2e-16 confirms the presence of strong heteroscedasticity which we will proceed to correct in the next section.
@@ -829,7 +914,7 @@ where NAICS 2 sector corresponds to sectoral fixed effect i.e.controlling for un
 
 Applying a fixed-effect OLS using the `lfe` package, we now have the following final result :
 
-```{r}
+```{r  results='asis'}
 #| echo: false
 #| message: false
 #| warning: false
@@ -838,9 +923,14 @@ Applying a fixed-effect OLS using the `lfe` package, we now have the following f
 fe_ols_model <- felm(log(`Total CO2 Emissions (non_biogenic)`) ~  `ln earn` + `ln emp` + state_dummy | `NAICS2  (sectors)`, data = dataset_for_ols)
 
 ## Summary of fixed-effect model
-stargazer(fe_ols_model, type = "latex",
-          title = "Fixed-Effects Model Regression Results",
-          out = "fe_regression_results.tex") 
+
+
+xtable_table <- xtable(fe_ols_model)
+xtable::print.xtable(
+  xtable_table,
+  include.rownames = FALSE,
+  comment = FALSE
+)
 ```
 
 The `ln earn` variable remains highly significant and positively correlated with CO2 emissions, just like in the previous results. The high similarity between the coefficients in all three models implies that wage does not correlate that differently with CO2 emissions across sectors. Similarly, the Environment dummy keeps its negative sign (-0.94) and gains significance (p = 9.22e-11). After controlling for sectoral fixed effects, firms in California, since the Cap-and-Trade program, emit approximately 94% less CO2 than similar firms in Texas or California pre-2015, thus corresponding to our previous result. Finally, the variable `ln emp` is now negatively correlated with CO2 emissions of industries (-0.004), but still not statistically significant (p = 0.942). The negative sign could be due to the fact that high-emitting industries (like fuel suppliers) may be more capital-intensive than labor intensive. Sectoral differences could have been masking the true effect of employment size on CO2 emissions of industries. We could indeed infer from the result that labor-intensive industries, i.e. that have more employees emit less than capital-intensive industries. However, this hypothesis should be relativized as the variable is even less significant than before.
